# uuagc

./: Makefile  Makefile.in  README  Setup.hs  VERSION  bootstrap.sh  configure.in  generate-sdist.sh  release.nix  update-src-generated.sh  uuagc.cabal  uuagc.cabal-for-ghc-6.6  uuagc.cabal-for-ghc-6.6.in  uuagc.cabal.in  uuagc_options
ag-src/: AbstractSyntax.ag  Code.ag  Comments.ag  DefaultRules.ag  ErrorMessages.ag  Expression.ag  GenerateCode.ag  GenerateCodeSM.ag  HsToken.ag  SemHsTokens.ag  SemRules.ag  Transform.ag
bootstrap/: README  update-cabalfile.sh  update-derived.sh  uuagc-bootstrap.cabal
bootstrap/src-derived/: AG2AspectAG.hs  AbstractSyntax.hs  AbstractSyntaxDump.hs  Code.hs  CodeSyntax.hs  CodeSyntaxDump.hs  ConcreteSyntax.hs  DeclBlocks.hs  DefaultRules.hs  Desugar.hs  ErrorMessages.hs  ExecutionPlan.hs  ExecutionPlan2Hs.hs  Expression.hs  GenerateCode.hs  HsToken.hs  Interfaces.hs  InterfacesRules.hs  KWOrder.hs  Macro.hs  Order.hs  Patterns.hs  PrintCode.hs  PrintErrorMessages.hs  PrintOcamlCode.hs  PrintVisitCode.hs  ResolveLocals.hs  SemHsTokens.hs  TfmToVisage.hs  Transform.hs  Visage.hs  VisagePatterns.hs  VisageSyntax.hs
bootstrap/src-main/: Main.hs
bootstrap/src-version/: Version.hs
cabal-plugin/: LICENSE  README  Setup.hs  src-options  uuagc-cabal.cabal
cabal-plugin/examples/repmin-0.1/: LICENSE  Setup.hs  repmin.cabal  uuagc_options
cabal-plugin/examples/repmin-0.1/src/: RepMax.ag  RepMaxHS.ag  RepMin.ag  RepMinHS.ag  RepMinMain.hs  RepMinMainHS.hs
cabal-plugin/src/Distribution/Simple/: UUAGC.hs
cabal-plugin/src/Distribution/Simple/UUAGC/: AbsSyn.hs  Options.hs  Parser.hs  UUAGC.hs
doc/: uuagc091usermanual.tex  uuagc093release.tex  uuagc094release.tex  uuagc095release.tex
doc/ag-tutorial/: AgTutorial.fmt  AgTutorial.ltx  Makefile  beamerthemeuucs.sty  example-tree.odg
doc/ag-tutorial/assignment/: Makefile  assignment.aux  assignment.tex  assignment.tex.bak
doc/ag-tutorial/diagrams/: cons_count.ppd  cons_count_full.ppd  cons_html.ppd  cons_left.ppd  cons_level.ppd  cons_right.ppd  cons_toc.ppd  section_count.ppd  section_html.ppd  section_left.ppd  section_level.ppd  section_right.ppd  section_toc.ppd
doc/ag-tutorial/example/: Html.ag  Html.ag.bak  Html.hi  Html.hs  Html0HS.ag  HtmlHS.ag  Makefile  html  test.doc  test.html
doc/ag-tutorial/pictures/: A48.pdftex  A48.pdftex_t  A49.pdftex  A49.pdftex_t  A50.pdftex  A50.pdftex_t  All.pdftex  All.pdftex_t  All47.pdftex  All47.pdftex_t  All48.pdftex  All48.pdftex_t  All50.pdftex  All50.pdftex_t  B47.pdftex  B47.pdftex_t  B48.pdftex  B48.pdftex_t  B49.pdftex  B49.pdftex_t  B50.pdftex  B50.pdftex_t  PictFlow.pdftex  PictFlow.pdftex_t  Pictall50.pdftex  Pictall50.pdftex_t
doc/hcar/: Makefile  UUAG-AU.tex  UUAG-JU.tex  hcar.tex  paralist.sty
example/: Example1.ag  Example2.ag  Example3.ag  Example4.ag  Example5.ag
order-bug/: Check.ag  README  WhatDoesWork.ag
regress/: Makefile  fake-deps.ag  irrefutable.ag  map.ag  tyvar.ag  visits-poly.ag
scripts/: mkAGdepend.sh  mkAGdepend.sh.in
src/: ATermWrite.hs  AbstractSyntax.hs  Ag.hs  Ag.hs.in  Code.hs  CommonTypes.hs  DefaultRules.hs  DepTypes.hs  ErrorMessages.hs  Expr.hs  GenerateCode.hs  GrammarInfo.hs  HsToken.hs  HsTokenScanner.hs  KennedyWarren.hs  Knuth1.hs  Options.hs  PPUtil.hs  Parser.hs  Patterns.hs  Pretty.hs  PrintCode.hs  PrintErrorMessages.hs  RhsCheck.hs  Scanner.hs  SemHsTokens.hs  SemRules.hs  SequentialComputation.lhs  SequentialTypes.hs  Streaming.hs  TokenDef.hs  Transform.hs
src-ag/: AG2AspectAG.ag  AbstractSyntax.ag  AbstractSyntaxDump.ag  Code.ag  CodeSyntax.ag  CodeSyntaxDump.ag  Comments.ag  ConcreteSyntax.ag  DeclBlocks.ag  DefaultRules.ag  Dep.ag  Desugar.ag  DistChildAttr.ag  ErrorMessages.ag  ExecutionPlan.ag  ExecutionPlan2Caml.ag  ExecutionPlan2Clean.ag  ExecutionPlan2Hs.ag  Expression.ag  ExpressionAttr.ag  GenerateCode.ag  GenerateCodeSM.ag  HsToken.ag  Interfaces.ag  InterfacesRules.lag  KWOrder.ag  Macro.ag  Order.ag  Patterns.ag  PrintCleanCode.ag  PrintCode.ag  PrintErrorMessages.ag  PrintOcamlCode.ag  PrintVisitCode.ag  ResolveLocals.ag  Rules.ag  SemHsTokens.ag  SemRules.ag  TfmToVisage.ag  Transform.ag  (+3 more)
src-generated/: AG2AspectAG.hs  AbstractSyntax.hs  AbstractSyntaxDump.hs  Code.hs  CodeSyntax.hs  CodeSyntaxDump.hs  ConcreteSyntax.hs  DeclBlocks.hs  DefaultRules.hs  Desugar.hs  ErrorMessages.hs  ExecutionPlan.hs  ExecutionPlan2Caml.hs  ExecutionPlan2Hs.hs  Expression.hs  GenerateCode.hs  HsToken.hs  Interfaces.hs  InterfacesRules.hs  KWOrder.hs  Macro.hs  Order.hs  Patterns.hs  PrintCode.hs  PrintErrorMessages.hs  PrintOcamlCode.hs  PrintVisitCode.hs  ResolveLocals.hs  SemHsTokens.hs  TfmToVisage.hs  Transform.hs  Visage.hs  VisagePatterns.hs  VisageSyntax.hs
src-main/: Main.hs
src-options/: Options.hs
src-version/: Version.hs
src/UU/: UUAGC.hs
src/UU/UUAGC/: Bootstrap.hs  BootstrapVersion.hs  Version.hs
test/: Block.ag  DataBug.ag  Failing.ag  Makefile  RepMin.ag  SixPass.ag  TestErr-CircDirect.ag  TestErr-CircDirect1.ag  TestErr-CircDirect2.ag  TestErr-CircDirect3.ag  TestErr-CircDirect4.ag  TestErr-CircInduced1.ag  TestErr-CircInduced2.ag  TestErr-CircLocal.ag  TestErr-CyclicSet.ag  TestErr-DupChild.ag  TestErr-DupChild2.ag  TestErr-DupInh.ag  TestErr-DupRule.ag  TestErr-DupSet.ag  TestErr-DupSet2.ag  TestErr-DupSyn.ag  TestErr-DupSyn2.ag  TestErr-DupThr.ag  TestErr-HsSyn.ag  TestErr-MissingRule.ag  TestErr-SuperflRule.ag  TestErr-UndefAlt.ag  TestErr-UndefAttr.ag  TestErr-UndefChild.ag  TestErr-UndefChild2.ag  TestErr-UndefLocal.ag  TestErr-UndefNont.ag  TestErr-UndefNont2.ag  TestErr-UndefNont3.ag  TestErrBareChild.ag  TestErrCircInstDouble.ag  TestErrDupFirst.ag  TestErrDupSig.ag  TestErrLineNumbering.ag  (+76 more)
tools/: Haskell2Ag.hs
tools/loopbreaker/: Bad.ag  LoopBreaker.hs  Makefile  builder.sh  initial.attrs  tester.sh
uuagc/: ConcreteSyntax.hs  DefaultRules.hs  DepTypes.hs  Expr.hs  Expression.hs  GenerateCode.hs  Options.hs  Parser.hs  Rules.hs
uuagc-web/: Setup.hs  uuagc-web.cabal
uuagc-web/frontends/: uuagc.sh
uuagc-web/src/: Main.hs
(+7 files in other folders)
