name: uuagc-web
version: 1.0.0.0
description: Webfrontend for UUAGC
license: BSD3
author: Arie Middelkoop
maintainer: amiddelk@gmail.com
build-type: Simple
cabal-version: >= 1.2

executable uuagc-web
  main-is: Main.hs
  build-depends: base >= 4, directory >= 1.0, bytestring >= 0.9, utf8-string >= 0.3.7
  build-depends: containers >= 0.4, mtl >= 2.0
  build-depends: uuagc >= 0.9.41, happstack-server >= 7.0.0, blaze-html >= 0.4
  hs-source-dirs: src
