
name:          repmin
version:       0.2
cabal-version: >=1.6
build-type:    Custom
license:       GPL
license-file:  LICENSE
copyright:     Copyright: (C) Juan Francisco Cardona McCormick
author:        Juan Francisco Cardona McCormick
maintainer:    fcardona@eafit.edu.co
stability:     experimental
bug-reports:   mailto: fcardona@eafit.edu.co
description:   An example of the use of the PPUUAGC preprocesor
extra-source-files:   src/RepMax.ag

Executable repmin
   build-depends:   base, uuagc-cabal >= 1.0.1.0, uuagc >= 0.9.40.0
   hs-source-dirs:  src
   main-is:         RepMinMain.hs
   other-modules:   RepMin
   x-agmodule:      file: "src/RepMin.ag" options : data, catas, semfuns, signatures, pretty, rename, module "RepMin", wrappers


Executable repminHS
   build-depends:   base, uuagc-cabal >= 1.0.1.0, uuagc >= 0.9.40.0
   hs-source-dirs:  src
   main-is:         RepMinMainHS.hs
   other-modules:   RepMinHS
   x-agmodule:      file: "src/RepMinHS.ag" options : data, catas, semfuns, signatures, pretty, rename, haskellsyntax, module "RepMinHS", wrappers

